proszcz/src/ms/parser/proszczParser.java
// Generated from java-escape by ANTLR 4.11.1
package ms.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class proszczParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, KOLOR_HTML=70, KOLOR_HTML_KROTKI=71, ZAWIJAS_LEWY=72, 
		ZAWIJAS_PRAWY=73, LNAWIAS_Z_KRATKA=74, PNAWIAS_Z_KRATKA=75, EWALUACJA=76, 
		LENIWA=77, SPRYTNA=78, GORLIWA=79, EOS=80, NAZWA=81, NAPIS_DOSL=82, STALA=83, 
		IntegerLiteral=84, COMMENT=85, WS=86;
	public static final int
		RULE_program = 0, RULE_proces = 1, RULE_instrukcja = 2, RULE_instrukcja_silnika = 3, 
		RULE_wypisanie = 4, RULE_wypisanie_krotkie = 5, RULE_wypisanie_rekursywne = 6, 
		RULE_pokaz_drzewo = 7, RULE_uruchomienie = 8, RULE_reset_silnika = 9, 
		RULE_logi = 10, RULE_instrukcja_procesowa = 11, RULE_import_procesu = 12, 
		RULE_deport_procesu = 13, RULE_typ_ewaluacji = 14, RULE_deklaracja_procesu = 15, 
		RULE_desygnat_celu = 16, RULE_zapis_segmentu_anonimowego = 17, RULE_blok_procesowy = 18, 
		RULE_naglowek_bloku_procesowego = 19, RULE_arnosc = 20, RULE_zawijanie_pamieci = 21, 
		RULE_wyrazenie = 22, RULE_lista_wyrazen = 23, RULE_nastepstwo_wyrazen = 24, 
		RULE_dodatek = 25, RULE_waga = 26, RULE_desygnat_wagi = 27, RULE_atrybut_wagi = 28, 
		RULE_generacja = 29, RULE_mutacja = 30, RULE_krzyzowanie = 31, RULE_krzyzowanie_arg = 32, 
		RULE_kopiowanie_dod = 33, RULE_wartosc = 34, RULE_glebokosc = 35, RULE_cel_dodatku = 36, 
		RULE_zrodlo_dodatku = 37, RULE_poz_dodatek = 38, RULE_pokoloruj = 39, 
		RULE_pokaz_generatory = 40, RULE_wezel_dod = 41, RULE_nieterm_dod = 42, 
		RULE_term_dod = 43, RULE_par_dod = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "proces", "instrukcja", "instrukcja_silnika", "wypisanie", 
			"wypisanie_krotkie", "wypisanie_rekursywne", "pokaz_drzewo", "uruchomienie", 
			"reset_silnika", "logi", "instrukcja_procesowa", "import_procesu", "deport_procesu", 
			"typ_ewaluacji", "deklaracja_procesu", "desygnat_celu", "zapis_segmentu_anonimowego", 
			"blok_procesowy", "naglowek_bloku_procesowego", "arnosc", "zawijanie_pamieci", 
			"wyrazenie", "lista_wyrazen", "nastepstwo_wyrazen", "dodatek", "waga", 
			"desygnat_wagi", "atrybut_wagi", "generacja", "mutacja", "krzyzowanie", 
			"krzyzowanie_arg", "kopiowanie_dod", "wartosc", "glebokosc", "cel_dodatku", 
			"zrodlo_dodatku", "poz_dodatek", "pokoloruj", "pokaz_generatory", "wezel_dod", 
			"nieterm_dod", "term_dod", "par_dod"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ls'", "'ll'", "'show'", "'-r'", "'-R'", "','", "'run'", "'reset'", 
			"'trace'", "'use'", "'^'", "'parent'", "'use-not'", "'::='", "'::+='", 
			"'-'", "'+'", "'~'", "'%'", "'*'", "'/'", "'&'", "'|'", "'~='", "'!~='", 
			"'>'", "'<'", "':='", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'if'", "'else'", "'while'", "'break_with'", "'weight'", "'of'", "':'", 
			"'node'", "'call'", "'min'", "'max'", "'roundexp'", "'='", "'full'", 
			"'grow'", "'s'", "'subtree'", "'sfs'", "'size-fair-subtree'", "'p'", 
			"'point'", "'-mutate'", "'depth'", "'cross'", "'with'", "'dcpy'", "'into'", 
			"'at'", "'color'", "'colour'", "'generators'", "'gens'", "'nonterm'", 
			"'term'", null, null, "'(/'", "'\\)'", "'(#'", "'#)'", null, null, null, 
			null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "KOLOR_HTML", 
			"KOLOR_HTML_KROTKI", "ZAWIJAS_LEWY", "ZAWIJAS_PRAWY", "LNAWIAS_Z_KRATKA", 
			"PNAWIAS_Z_KRATKA", "EWALUACJA", "LENIWA", "SPRYTNA", "GORLIWA", "EOS", 
			"NAZWA", "NAPIS_DOSL", "STALA", "IntegerLiteral", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public proszczParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(proszczParser.EOF, 0); }
		public List<InstrukcjaContext> instrukcja() {
			return getRuleContexts(InstrukcjaContext.class);
		}
		public InstrukcjaContext instrukcja(int i) {
			return getRuleContext(InstrukcjaContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 3025866811683055502L) != 0 || (((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 713023L) != 0) {
				{
				{
				setState(90);
				instrukcja();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcesContext extends ParserRuleContext {
		public Deklaracja_procesuContext deklaracja_procesu() {
			return getRuleContext(Deklaracja_procesuContext.class,0);
		}
		public TerminalNode EOF() { return getToken(proszczParser.EOF, 0); }
		public ProcesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterProces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitProces(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitProces(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcesContext proces() throws RecognitionException {
		ProcesContext _localctx = new ProcesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proces);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			deklaracja_procesu();
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrukcjaContext extends ParserRuleContext {
		public Instrukcja_procesowaContext instrukcja_procesowa() {
			return getRuleContext(Instrukcja_procesowaContext.class,0);
		}
		public Instrukcja_silnikaContext instrukcja_silnika() {
			return getRuleContext(Instrukcja_silnikaContext.class,0);
		}
		public DodatekContext dodatek() {
			return getRuleContext(DodatekContext.class,0);
		}
		public InstrukcjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrukcja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterInstrukcja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitInstrukcja(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitInstrukcja(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrukcjaContext instrukcja() throws RecognitionException {
		InstrukcjaContext _localctx = new InstrukcjaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrukcja);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__12:
			case T__15:
			case T__16:
			case T__28:
			case T__29:
			case T__31:
			case T__33:
			case T__35:
			case T__37:
			case T__38:
			case ZAWIJAS_LEWY:
			case LENIWA:
			case SPRYTNA:
			case GORLIWA:
			case NAZWA:
			case STALA:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				instrukcja_procesowa();
				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				instrukcja_silnika();
				}
				break;
			case T__39:
			case T__42:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case T__52:
			case T__53:
			case T__54:
			case T__55:
			case T__58:
			case T__60:
			case T__63:
			case T__64:
			case T__65:
			case T__66:
			case T__67:
			case T__68:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				dodatek();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Instrukcja_silnikaContext extends ParserRuleContext {
		public UruchomienieContext uruchomienie() {
			return getRuleContext(UruchomienieContext.class,0);
		}
		public WypisanieContext wypisanie() {
			return getRuleContext(WypisanieContext.class,0);
		}
		public Reset_silnikaContext reset_silnika() {
			return getRuleContext(Reset_silnikaContext.class,0);
		}
		public Pokaz_drzewoContext pokaz_drzewo() {
			return getRuleContext(Pokaz_drzewoContext.class,0);
		}
		public LogiContext logi() {
			return getRuleContext(LogiContext.class,0);
		}
		public Instrukcja_silnikaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrukcja_silnika; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterInstrukcja_silnika(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitInstrukcja_silnika(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitInstrukcja_silnika(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instrukcja_silnikaContext instrukcja_silnika() throws RecognitionException {
		Instrukcja_silnikaContext _localctx = new Instrukcja_silnikaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instrukcja_silnika);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				uruchomienie();
				}
				break;
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				wypisanie();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				reset_silnika();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				pokaz_drzewo();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				logi();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WypisanieContext extends ParserRuleContext {
		public Wypisanie_krotkieContext wypisanie_krotkie() {
			return getRuleContext(Wypisanie_krotkieContext.class,0);
		}
		public Wypisanie_rekursywneContext wypisanie_rekursywne() {
			return getRuleContext(Wypisanie_rekursywneContext.class,0);
		}
		public WypisanieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wypisanie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterWypisanie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitWypisanie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitWypisanie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WypisanieContext wypisanie() throws RecognitionException {
		WypisanieContext _localctx = new WypisanieContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_wypisanie);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				wypisanie_krotkie();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				wypisanie_rekursywne();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Wypisanie_krotkieContext extends ParserRuleContext {
		public TerminalNode EOS() { return getToken(proszczParser.EOS, 0); }
		public TerminalNode NAZWA() { return getToken(proszczParser.NAZWA, 0); }
		public Wypisanie_krotkieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wypisanie_krotkie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterWypisanie_krotkie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitWypisanie_krotkie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitWypisanie_krotkie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wypisanie_krotkieContext wypisanie_krotkie() throws RecognitionException {
		Wypisanie_krotkieContext _localctx = new Wypisanie_krotkieContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_wypisanie_krotkie);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__0);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAZWA) {
				{
				setState(118);
				match(NAZWA);
				}
			}

			setState(121);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Wypisanie_rekursywneContext extends ParserRuleContext {
		public TerminalNode EOS() { return getToken(proszczParser.EOS, 0); }
		public TerminalNode NAZWA() { return getToken(proszczParser.NAZWA, 0); }
		public Wypisanie_rekursywneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wypisanie_rekursywne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterWypisanie_rekursywne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitWypisanie_rekursywne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitWypisanie_rekursywne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wypisanie_rekursywneContext wypisanie_rekursywne() throws RecognitionException {
		Wypisanie_rekursywneContext _localctx = new Wypisanie_rekursywneContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_wypisanie_rekursywne);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__1);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAZWA) {
				{
				setState(124);
				match(NAZWA);
				}
			}

			setState(127);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pokaz_drzewoContext extends ParserRuleContext {
		public Token rek;
		public List<TerminalNode> NAZWA() { return getTokens(proszczParser.NAZWA); }
		public TerminalNode NAZWA(int i) {
			return getToken(proszczParser.NAZWA, i);
		}
		public TerminalNode EOS() { return getToken(proszczParser.EOS, 0); }
		public Pokaz_drzewoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pokaz_drzewo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterPokaz_drzewo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitPokaz_drzewo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitPokaz_drzewo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pokaz_drzewoContext pokaz_drzewo() throws RecognitionException {
		Pokaz_drzewoContext _localctx = new Pokaz_drzewoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pokaz_drzewo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__2);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3 || _la==T__4) {
				{
				setState(130);
				((Pokaz_drzewoContext)_localctx).rek = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
					((Pokaz_drzewoContext)_localctx).rek = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(133);
			match(NAZWA);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(134);
				match(T__5);
				setState(135);
				match(NAZWA);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UruchomienieContext extends ParserRuleContext {
		public TerminalNode NAZWA() { return getToken(proszczParser.NAZWA, 0); }
		public TerminalNode EOS() { return getToken(proszczParser.EOS, 0); }
		public UruchomienieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uruchomienie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterUruchomienie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitUruchomienie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitUruchomienie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UruchomienieContext uruchomienie() throws RecognitionException {
		UruchomienieContext _localctx = new UruchomienieContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_uruchomienie);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__6);
			setState(144);
			match(NAZWA);
			setState(145);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Reset_silnikaContext extends ParserRuleContext {
		public TerminalNode EOS() { return getToken(proszczParser.EOS, 0); }
		public Reset_silnikaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reset_silnika; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).enterReset_silnika(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proszczListener ) ((proszczListener)listener).exitReset_silnika(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proszczVisitor ) return ((proszczVisitor<? extends T>)visitor).visitReset_silnika(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reset_silnikaContext reset_silnika() throws RecognitionException {
		Reset_silnikaContext _localctx = new Reset_silnikaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_reset_silnika);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__7);
			setState(148);
			match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
